--- a/2025/week_47/insta_weekly_2025_47_gpt-5-2025-08-07.md
+++ b/2025/week_47/insta_weekly_2025_47_gpt-5-2025-08-07.md
@@ -1,105 +1,127 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway (Nov 17–23, 2025): Indie launch week drove a surge in iridescent/sparkly eye looks and grunge-leaning lips. Fantasy Cosmetica Artificer, Terra Moons Night of the Leonids, and Melt x Edward Scissorhands anchored the feed, while tutorial-style reels and shade-by-shade try-ons captured the highest engagement.
+- Key Takeaway (Nov 17–23, 2025): Iridescent/grunge sparkle dominated as indie launches (Terra Moons Night of the Leonids, Fantasy Cosmetica Artificer, MOB x Courtney Reverie, Glaminatrix Merry Chrissy) drove the feed; tutorial/try-on reels and lip “cocktail” content outperformed static photos.
 
 ## 1. Overview
 
 - The Vibe:
-  - Launch-heavy week with wall-to-wall swatches, try-ons, and “every shade on eye” reels.
-  - Low-light sparkle videography and macro shots dominated; creators layered neutral mattes with high-impact toppers for fast glam.
-  - Parallel aesthetics: ethereal shimmer (iridescent toppers) vs. alt/grunge (cool-brown liners, blackened purple/green lips).
+  - Launch-heavy week with swatch stacks, full-arm try-ons, and quick tutorials.
+  - Eyes = multichrome toppers, glitter-saturated lids, grungy olives/emeralds and cranberries; cool blues/silvers for holiday.
+  - Lips = cool brown/grey-lined “grunge nudes,” metallics, and high-sparkle gloss melts.
+  - Skin prep moments (semi vs wet dewy K-beauty SPFs) and technique reels (blush pressure, under-brow sparkle) got clear watch-through.
 
 - Engagement Temperature:
-  - Hot. Tutorial reels and practical demos outperformed static photos.
-    - Benchmarks: Lindsey’s step-by-step eyeshadow reel (~29k likes/296k plays), Wet n Wild My Melody full-collection demo (~23k likes/237k plays), Gucci green lipstick test (~23k likes/377k plays).
-  - Comments showed active purchase planning (codes, shipping, texture questions) and immediate conversion (“Got mine,” “I need this,” “waiting for BF sale”).
+  - High excitement and purchase chatter around Terra Moons, Artificer, Merry Chrissy, Kaleidos Glossload, and RdF Hemlock.
+  - Followers asked texture/finish questions (stickiness, flake vs smooth), shipping/tariff logistics (AU brands), and asked for full routines and dupes (green lipstick, KIKO 36 liner).
+  - Tutorial reels (Lindsey) and technique education (Robert Welsh) garnered the most saves/comments.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Fantasy Cosmetica (Artificer palette + singles + toolkit), Terra Moons (Night of the Leonids), Glisten Cosmetics (Shapeshifter, Bliss; Spectra pencils/mascara), Kaleidos (Moon Arcade/Glossload), MOB Beauty x Courtney (Reverie palette + Linger gloss + blue balm), Melt x Edward Scissorhands, Rituel de Fille (Ghost Frequency: Hemlock lip sheer), Blend Bunny (multiple palettes + BF sale), Simply Posh (pastels), Oden’s Eye (Ice Crystal), Viseart (Sireneuse), Fenty (How Many Carats), Haus Labs (Fire Opal), Danessa Myricks (Lightwork 7), Patrick Ta, Huda Beauty.
+  - Terra Moons, Fantasy Cosmetica, Blend Bunny, Rituel de Fille, MOB Beauty, Kaleidos, Melt, Glisten Cosmetics, Glaminatrix, Danessa Myricks, Oden’s Eye, Cosmic Brushes, Singe Beauty, Wet n Wild, KIKO Milano, House of Hur, Fwee, Patrick Ta, Huda Beauty, Makeup by Mario.
 
-- Viral Products (demand + questions):
-  - Fantasy Cosmetica Artificer: Multi-creator push (swatches, daylight/lowlight, narrative around the repair toolkit). Commenters asking what an “Artificer” is, plus “want this palette” signals.
-  - Terra Moons Night of the Leonids: Multiple swatch reels; comments citing specific shade lust (“Emberfell,” “Neowise,” “Celestine Dust”), “I was done buying this year but…”
-  - Kaleidos Moon Arcade/Glossload: Up-close swatches; buyers probing texture (gritty/sticky) and code stacking—conversion friction but high interest.
-  - MOB Beauty x Courtney Reverie: Emotional launch story, creators using shades beyond eyes (purple as blush). Lip content (M149 blue balm + Linger gloss) drew “how-to” engagement.
-  - Melt x Edward Scissorhands: Unboxings + looks; packaging/formula notes (smoother/brighter shimmers, one shade more pressed-glitter-like) helped preempt returns.
-  - Rituel de Fille Hemlock Lip Sheer: Tease as GWP with BF details; heavy save/intent commentary (“I want it so bad”).
-  - Fenty How Many Carats (new): “Add to cart energy” with scent texture concerns; BF timing noted.
-  - Glisten Shapeshifter/Bliss: Ongoing iridescent-love; one user report “use most days.”
-  - Oden’s Eye Ice Crystal, Viseart Sireneuse (new greens), Haus Labs Fire Opal highlighter: “Own” and “dupe?” chatter, steady intent.
+- Viral Products (by repeated appearance/specific comment demand):
+  - Terra Moons Night of the Leonids singles (Ecliptica, Midnight Arc, Neowise, Tempel, Celestine Dust; “can’t pass up,” shade call-outs).
+  - Fantasy Cosmetica Artificer: 9‑pan palette + holo singles (Stygium/Damascus/Adamantine) + depot/repair toolkit; multiple creators, cross‑tone swatches.
+  - MOB x Courtney Reverie: Linger lip gloss (greige/grunge), cream clay pan used as blush; viewers asking for combos.
+  - Kaleidos Glossload Lip Melts (Prismelt, Cypher, Pixel Storm, Lunar Token): texture questions and shade favorites.
+  - Glaminatrix Merry Chrissy 15‑pan: “SOLD!!!!”, availability questions (US warehouse).
+  - Rituel de Fille Hemlock Lip Sheer (blackened purple): strong “I need this” energy; GWP mechanics noted.
+  - Haus Labs Fire Opal highlighter: “staple” callouts.
+  - Gucci Beauty Valentin Verdante green lipstick: demand for dupes/restock lineage (Plan 9 chatter).
+  - Wet n Wild My Melody x Kuromi: cream blush crowned “best baby pink,” glitter gel criticized for lifting base.
+  - Fwee Spa Glowing UV Tone Up Prep (semi vs wet): audience poll energy; perceived tone-evening.
 
 - The “Look” Breakdown:
-  - Eyes: Neutral-brown scaffolding (Patrick Ta) + high-sparkle toppers (Terra Moons/Glisten/Cloudicos/Dieverune/Clionadh). Techniques: pastel inner-corner draping under brow; extended lid shimmer above crease for bigger eyes; warm–cool mixing (blue + amber inner corner).
-  - Lips: Cool-toned brown liners resurging (KIKO 36 Cold Brown chase), black liner corners for subtle ombré, blue balm overlays to cool/shine, blackened purples (Hemlock), metallic comeback (Melt “Ghosted”), sparkly gloss/oil toppers (Fenty, Kaleidos, Cosmic Brushes oil adding blue hue).
-  - Cheeks: Baby-pink blushes (Huda pink palette; Wet n Wild My Melody cream blush surprise hit), deeper bronzy/neutral cheek for grunge balance; education on handling high-pigment blush via brush choice/pressure.
+  - Eyes:
+    - Black cream/matte base + jewel shimmer (Makeup by Mario black + emeralds/cranberries).
+    - Duochrome/iridescent toppers (Glisten Shape Shifter/Bliss; Terra Moons; Cloudicos pocket seasonal shimmers).
+    - Under-brow sparkle washes and “tucked” pastels along inner crease/under-eye.
+    - Pops of chartreuse/sage on waterline/inner corner to offset cool blue smoke (Melt x Edward).
+  - Cheeks:
+    - Surge in baby pink creams (Huda, Wet n Wild), mauve/berry options, and luminous duo/duochrome highlights (Haus Labs Fire Opal; indie toppers as face highlight).
+  - Lips:
+    - Cool brown liner + black corners + greige gloss (MOB Linger), blue balm overlays to cool undertone.
+    - Metallics (Melt “Ghosted”), deep aubergine sheer (RdF Hemlock), glossy sparkle melts (Kaleidos).
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #sparklymakeup, #etherealmakeup, #iridescentmakeup: Low-light, macro sparkle as hero.
-  - #grunge/#gothmakeup/#altmakeup: Cool-toned liner lips, blackened tones, sage/gray accents.
-  - #pastel/#coquette/#douyinmakeup: Pastel draping and soft shimmer with Y2K energy.
-  - Holiday/story-led collabs: Merry Chrissy (Aussie nostalgia), Edward Scissorhands (moody winter).
+  - #sparklymakeup #iridescentmakeup #etherealmakeup meet #grunge #gothmakeup #softgoth.
+  - Coquette/pastel emo GRWMs; holiday sparkle; Aussie Christmas nostalgia; cyberpunk adjacency.
+  - Heavy low‑light shimmer captures; glitter cascading below the eye; mixed-metal lids.
 
 - Color Stories:
-  - Jewel tones and moody brights: emerald/olive, burgundy, sugar-plum purples.
-  - Warm metallics from Artificer (coppers/bronzes) paired with cool blues.
-  - Pop accents: sage inner corners; monochrome red eyes; blurple iridescents; icy silvers.
+  - Blackened olive/emerald and antique golds; cranberry/berry reds; icy blues/silvers; mixed metals (champagne→bronze); pastel pink/lilac highlights; greige/grey lips; chartreuse/sage accents.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Terra Moons Night of the Leonids: “Can’t pass up this collection,” naming shade favorites.
-  - Glaminatrix Merry Chrissy: “SOLD!!!!,” “Got mine!” at launch.
-  - Fenty How Many Carats: “I think I’m picking this up during Black Friday.”
-  - Dieverune singles: “Hoping to grab during the sale.”
-  - Fantasy Cosmetica: “Never heard of an artificer but want this palette.”
+  - Terra Moons: “can’t pass up this collection”; specific shade faves.
+  - Glaminatrix Merry Chrissy: “SOLD!!!!”, “Got mine!”
+  - Fantasy Cosmetica Artificer: “so so excited,” “I want all of this.”
+  - Rituel de Fille Hemlock: “I might have to have that.”
+  - Kaleidos Glossload: “How much do I need one of these?”
+  - Fenty How Many Carats expansion: “I want it so bad.”
+  - Oden’s Eye Ice Crystal: “glad I picked this up.”
 
 - Restock Demands:
-  - Rituel de Fille: Anticipation for BF-exclusive Hemlock; users planning cart.
-  - Dieverune drop highlighter restock (Dec) flagged as must-grab.
+  - KIKO Smart Fusion Lip Liner 36 Cold Brown: long OOS saga; pent-up demand.
+  - Dieverune “drop” highlighter restocking noted for December.
+  - Boy Smells “LES” candle lament (non-makeup, signals accessory interest).
+  - Green lipstick dupe hunt (KVD Plan 9 legacy).
 
 - Curiosity Clusters:
-  - Texture/feel: Kaleidos gloss grit/stickiness; Fenty scent; shimmer fallout vs. grip (Glaminatrix notes to use a tacky primer).
-  - Availability/logistics: “US warehouse?” for Glaminatrix; tariff concerns on imports; bundle/discount stacking questions (Kaleidos).
-  - Technique asks: “How to layer iridescents,” “under-eye shadow,” “brush pressure,” “freckles how-to.”
+  - Gloss texture grittiness/stickiness (Kaleidos vs Fenty; user asks about feel).
+  - Glitter gels lifting base (Wet n Wild gel critique); desire for better adhesives.
+  - Dew level preferences (Fwee “semi vs wet”), fragrance notes.
+  - Shipping/tariffs for AU brands (Cloudicos/Glaminatrix); US warehouse availability.
+  - Shade/technique asks: “What was your eye look?”, “Can you do gray version?”, “List your palettes/glitter sticks?”
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Sparkle toppers/multichromes: Terra-Moons-style jewel tones; iridescent quads/travel palettes (Cloudicos-like); ultra-sparkly singles (Dieverune/Clionadh vibe).
-  - Neutral-to-sparkle palettes: Fantasy Cosmetica Artificer (shimmer-forward with workable mattes); Viseart Sireneuse greens; Oden’s Eye icy tones.
-  - Grunge lip bar: cool-brown liners, black liners, blue balm, blackened purple/green lip options, metallic lipsticks; pair with non-gritty sparkly glosses.
-  - Cheek edit: baby-pink creams and mauve/berry mattes; include tools to control pigment (duo fiber, airy brushes).
-  - Accessories/tools: glitter adhesives/“grip” primers, pan-repair/toolkits, maroon/burgundy mascara.
+  - Eyes:
+    - Multichrome/iridescent singles and topper palettes: jewel olives, blackened greens, cranberry shimmers, icy silvers; include low‑flake, high‑sparkle options.
+    - Mixed-metals duo sets (champagne + bronze/olive) and chartreuse pencils/liners.
+    - Glitter support: high-grip eye-safe adhesives; non-lifting glitter gels.
+  - Lips:
+    - Cool brown and black liners, greige/gray glosses, blue-toned balms; deep aubergine sheers; metallic options.
+    - High-sparkle gloss melts with varying particle sizes (offer texture transparency).
+  - Complexion/Cheeks:
+    - Baby pink and mauve/berry cream blushes (highly pigmented but blendable).
+    - Duochrome/pearl highlighters (fire-opal, lavender/blue shifts).
+    - Dewy SPF tone-up preps (semi vs wet finishes).
+  - Tools/Extras:
+    - Depotting/repair kits and magnetic palettes (Artificer buzz validates category).
+    - Holiday-forward curated bundles: “Grunge Sparkle Kit” (black base, jewel topper, greige gloss, chartreuse liner, glitter adhesive).
 
 - Content Strategy:
-  - Short-form tutorials with clear steps (outer-corner stamp → inner drizzle of pastel → topper), plus “semi vs wet dewy” SPF/primer comparisons.
-  - Shade-by-shade try-ons for new collections; macro + lowlight sparkle reels.
-  - “How to make pastels work on deep skin” blending tutorials; warm–cool mix demos.
-  - Lip-combo shorts (liner + black corners + balm/gloss overlay); include scent/texture callouts to reduce returns.
-  - Black Friday clarity: code stacking, bundle discounts, shipping/warehouse notes to reduce friction.
+  - 30–60s try-on reels swatching “every shade” (Terra Moons-style) and low-light sparkle flips.
+  - “Semi vs wet” dewy prep split-face tests; macro swatch labels; texture disclosures.
+  - Lip cocktail recipes (liner + gloss + balm overlays) and under-brow/under-eye pastel placement shorts.
+  - Mixed-metals eye tutorial; monochrome red look; “office-to-party” topper transitions.
+  - Address shipping/tariff FAQs for AU brands; US-warehouse flags on PDPs.
 
 - Gap Analysis:
-  - Glitter gels: users dislike overly wet formulas lifting shadow—stock drier gels/pressed glitters + adhesives.
-  - Setting powders: clear demand for non-sparkly, micro-fine brightening under-eye powders.
-  - Affordable palettes: desire for deeper shades/contrast (drugstore launches lacked depth).
-  - Logistics: US-warehouse availability and transparent tariff estimates win carts.
+  - Provide non-lifting glitter gels/adhesives and warn users about base-lifting formulas.
+  - Offer KIKO 36 Cold Brown dupes (cool brown liners) and stock black liners with slip + set.
+  - Include deeper anchor shades in pastel/cute palettes.
+  - Note gloss texture options (buttery vs chunky glitter) and scent-free variants.
 
 ## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Sage inner-corner pop against blues; monochrome red lids; mixed-metals eyes (warm lids + cool detail).
-  - Cool-brown liner mania (KIKO 36 Cold Brown shout)—expect sustained demand and dupes.
-  - Blue-shift lip toppers (oils/gloss) over matte bases; maroon/burgundy mascara accents.
+  - Pastel “tucked” under-eye/inner socket highlight with otherwise neutral/grunge looks.
+  - Chartreuse/sage accents paired with cool blue smoke—read as modern editorial holiday.
+  - Greige/grey gloss as a wearable grunge neutral (MOB Linger momentum).
+  - Customization as hobby: depot/repair kits and empty magnetic books gaining traction.
 
 - Unexpected Pairings:
-  - Eyeshadow-as-blush (MOB purple); highlighters on Cupid’s bow for blue gleam; black lip-liner corners for micro-ombré; duochrome highlighters as lid shades.
+  - Cream clay eyeshadow reused as blush (MOB “Memento”-style use).
+  - Matte liquid lipstick + holo lip oil center to shift hue (blue tint overlays).
+  - Mixed-metals lids (gold inner/bronze outer) on warm–cool hybrid faces.
+  - Danessa Colorfix Stix foils used as lid topcoats over neutrals instead of glitter.
 
-- Creative insight:
-  - “Lowlight sparkle” is the new swatch language—build a dedicated content pipeline (dim light reels + macro transitions).
-  - “Wet vs semi-dewy” skin prep comparison content maps neatly to winter dryness concerns—bundle glow primers/SPF with hydrating bases.
-  - Storytelling sells: tie palettes to place/time (Aussie Christmas, DnD Artificer, film-collab nostalgia). Curate capsules by mood—Nostalgia Warm Sparkle, Icy Siren, Grunge Romance.
-
+- Creative Insight:
+  - Package “Holiday Grunge Sparkle” bundles: black cream base, one jewel multichrome, one icy topper, chartreuse pencil, greige gloss, mini glitter adhesive. Pair with a “low-light sparkle” reel template to replicate the week’s best-performing visual language.
