--- a/2025/week_47/insta_weekly_2025_47_gpt-5-2025-08-07.md
+++ b/2025/week_47/insta_weekly_2025_47_gpt-5-2025-08-07.md
@@ -1,127 +1,114 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway (Nov 17–23, 2025): Iridescent/grunge sparkle dominated as indie launches (Terra Moons Night of the Leonids, Fantasy Cosmetica Artificer, MOB x Courtney Reverie, Glaminatrix Merry Chrissy) drove the feed; tutorial/try-on reels and lip “cocktail” content outperformed static photos.
+- Key Takeaway: 17–23 Nov 2025 leaned maximalist and sparkly: indie duochromes and glitter toppers drove the feed (Fantasy Cosmetica Artificer, Terra Moons Night of the Leonids), while grunge-leaning lip combos and glossy, iridescent lips spiked engagement. Tutorial-style reels and full-collection try-ons outperformed static shots.
 
 ## 1. Overview
 
 - The Vibe:
-  - Launch-heavy week with swatch stacks, full-arm try-ons, and quick tutorials.
-  - Eyes = multichrome toppers, glitter-saturated lids, grungy olives/emeralds and cranberries; cool blues/silvers for holiday.
-  - Lips = cool brown/grey-lined “grunge nudes,” metallics, and high-sparkle gloss melts.
-  - Skin prep moments (semi vs wet dewy K-beauty SPFs) and technique reels (blush pressure, under-brow sparkle) got clear watch-through.
+  - Heavy on live swatches, try-ons, and quick tutorials showcasing multichrome/iridescent textures; multiple brand launch weeks overlapped.
+  - Reels mixed technique education (placement, brush pressure, base selection) with shade-by-shade try-ons across entire collections.
+  - Aesthetic split: ethereal toppers in cool light vs moody grunge glam (blackened greens, cranberry shimmers, vampy lips).
 
 - Engagement Temperature:
-  - High excitement and purchase chatter around Terra Moons, Artificer, Merry Chrissy, Kaleidos Glossload, and RdF Hemlock.
-  - Followers asked texture/finish questions (stickiness, flake vs smooth), shipping/tariff logistics (AU brands), and asked for full routines and dupes (green lipstick, KIKO 36 liner).
-  - Tutorial reels (Lindsey) and technique education (Robert Welsh) garnered the most saves/comments.
+  - Warm-to-hot. Comments included “I need this”/“AHH I WANT,” restock queries, shipping/tariff questions, and texture concerns (stickiness/grit, wet glitter gels).
+  - Audiences asked for product lists, alternatives for skin tones, and dupes (esp. for sparkly glosses).
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Terra Moons, Fantasy Cosmetica, Blend Bunny, Rituel de Fille, MOB Beauty, Kaleidos, Melt, Glisten Cosmetics, Glaminatrix, Danessa Myricks, Oden’s Eye, Cosmic Brushes, Singe Beauty, Wet n Wild, KIKO Milano, House of Hur, Fwee, Patrick Ta, Huda Beauty, Makeup by Mario.
+  - Fantasy Cosmetica, Terra Moons, Blend Bunny, Rituel de Fille, Kaleidos, Melt Cosmetics, Danessa Myricks, Glisten Cosmetics, MOB Beauty x Courtney Quarantine, Oden’s Eye, Urban Decay, Viseart, Fwee, Fenty Beauty, Cloudicos, Dieverune, Glaminatrix.
 
-- Viral Products (by repeated appearance/specific comment demand):
-  - Terra Moons Night of the Leonids singles (Ecliptica, Midnight Arc, Neowise, Tempel, Celestine Dust; “can’t pass up,” shade call-outs).
-  - Fantasy Cosmetica Artificer: 9‑pan palette + holo singles (Stygium/Damascus/Adamantine) + depot/repair toolkit; multiple creators, cross‑tone swatches.
-  - MOB x Courtney Reverie: Linger lip gloss (greige/grunge), cream clay pan used as blush; viewers asking for combos.
-  - Kaleidos Glossload Lip Melts (Prismelt, Cypher, Pixel Storm, Lunar Token): texture questions and shade favorites.
-  - Glaminatrix Merry Chrissy 15‑pan: “SOLD!!!!”, availability questions (US warehouse).
-  - Rituel de Fille Hemlock Lip Sheer (blackened purple): strong “I need this” energy; GWP mechanics noted.
-  - Haus Labs Fire Opal highlighter: “staple” callouts.
-  - Gucci Beauty Valentin Verdante green lipstick: demand for dupes/restock lineage (Plan 9 chatter).
-  - Wet n Wild My Melody x Kuromi: cream blush crowned “best baby pink,” glitter gel criticized for lifting base.
-  - Fwee Spa Glowing UV Tone Up Prep (semi vs wet): audience poll energy; perceived tone-evening.
+- Viral Products:
+  - Fantasy Cosmetica “Artificer” collection (9-pan palette + holo singles + depotting/repair toolkit): multi-creator coverage, swatch depth, tool innovation highlighted.
+  - Terra Moons “Night of the Leonids” (14 singles): repeated try-ons; standout shades cited in comments—Midnight Arc, Ecliptica, Celestine Dust, Tempel, Neowise.
+  - Kaleidos Glossload Lip Melt (Moon Arcade): shades Cypher and Prismelt drew “is it gritty/sticky?” questions; macro swatches performed.
+  - Rituel de Fille Hemlock Lip Sheer (Black Friday GWP): strong vampy-lip interest; “surprised in the best way.”
+  - Blend Bunny anchor SKUs around BF (Beauty Below, Longing, Garden of Stars, Rotten; Masterclass blush): sale urgency and quick sell-through signals.
+  - Melt x Edward Scissorhands: multiple parts of unboxings; performance praised vs prior Melt shimmers.
+  - Oden’s Eye Ice Crystal: snowy shimmer enthusiasm.
+  - Fwee Spa Glowing Tone Up Prep (Semi vs Wet): utility + SPF; viewers picked a side.
+  - Fenty “How Many Carats” lips: “add to cart” energy despite mixed scent feedback.
 
 - The “Look” Breakdown:
   - Eyes:
-    - Black cream/matte base + jewel shimmer (Makeup by Mario black + emeralds/cranberries).
-    - Duochrome/iridescent toppers (Glisten Shape Shifter/Bliss; Terra Moons; Cloudicos pocket seasonal shimmers).
-    - Under-brow sparkle washes and “tucked” pastels along inner crease/under-eye.
-    - Pops of chartreuse/sage on waterline/inner corner to offset cool blue smoke (Melt x Edward).
+    - Textures: multichrome/duochrome toppers, holo micro-glitter, smooth high-shine metallics. Low-flake, smooth sparkles were praised.
+    - Shades: blackened/emerald greens; cranberry/berry shimmers; icy silvers; iridescent pink-lavender toppers; chartreuse pops on waterline/inner eye.
+    - Techniques: under-eye shadow to “ground” looks; pastel inner contour/inner crease tucks; “Pac-Man” outer corner liner stamp; macro lid swatches and low-light reveals.
   - Cheeks:
-    - Surge in baby pink creams (Huda, Wet n Wild), mauve/berry options, and luminous duo/duochrome highlights (Haus Labs Fire Opal; indie toppers as face highlight).
+    - Baby pinks, mauve-berry tones; education focused on managing pigment via brush density and where you hold the brush.
   - Lips:
-    - Cool brown liner + black corners + greige gloss (MOB Linger), blue balm overlays to cool undertone.
-    - Metallics (Melt “Ghosted”), deep aubergine sheer (RdF Hemlock), glossy sparkle melts (Kaleidos).
+    - Grunge liners (cold brown + black corners), vampy blackened purple (Hemlock), metallic copper/rose, glossy sparkle toppers; blue balm layered to cool/brighten.
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #sparklymakeup #iridescentmakeup #etherealmakeup meet #grunge #gothmakeup #softgoth.
-  - Coquette/pastel emo GRWMs; holiday sparkle; Aussie Christmas nostalgia; cyberpunk adjacency.
-  - Heavy low‑light shimmer captures; glitter cascading below the eye; mixed-metal lids.
+  - #sparklymakeup, #etherealmakeup, #gothmakeup, #grunge, #altmakeup, #eyeshadowtutorial, #cbeauty and #kbeauty cross-over.
+  - Low-light sparkle reels, glitter “bombs” across lid and lower lash line; editorial glitter accents (star shapes).
+  - Coquette/pastel emo crossover: soft pink structures with grunge liner and black lash lines.
 
 - Color Stories:
-  - Blackened olive/emerald and antique golds; cranberry/berry reds; icy blues/silvers; mixed metals (champagne→bronze); pastel pink/lilac highlights; greige/grey lips; chartreuse/sage accents.
+  - Emerald/olive/teal with gold shifts; cranberry/blackened berry; icy silver + lavender iridescence; chartreuse inner details; monochrome red lids; mixed metals (gold + cool glitter).
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Terra Moons: “can’t pass up this collection”; specific shade faves.
-  - Glaminatrix Merry Chrissy: “SOLD!!!!”, “Got mine!”
-  - Fantasy Cosmetica Artificer: “so so excited,” “I want all of this.”
-  - Rituel de Fille Hemlock: “I might have to have that.”
-  - Kaleidos Glossload: “How much do I need one of these?”
-  - Fenty How Many Carats expansion: “I want it so bad.”
-  - Oden’s Eye Ice Crystal: “glad I picked this up.”
+  - Terra Moons: “can’t pass up this collection!!”
+  - Fantasy Cosmetica Artificer: “Never heard … but want this palette”
+  - Kaleidos Glossload: sustained curiosity; requests for comparisons to Fenty.
+  - Fenty How Many Carats lips: “I want it so bad”
+  - Rituel de Fille Hemlock: “I might have to have that”
+  - Blend Bunny BF: “Rotten sold out at 12:01”
 
 - Restock Demands:
-  - KIKO Smart Fusion Lip Liner 36 Cold Brown: long OOS saga; pent-up demand.
-  - Dieverune “drop” highlighter restocking noted for December.
-  - Boy Smells “LES” candle lament (non-makeup, signals accessory interest).
-  - Green lipstick dupe hunt (KVD Plan 9 legacy).
+  - Kiko Milano Smart Fusion Lip Liner 36 Cold Brown long-term OOS narrative; Dieverune “Drop” highlighter restock noted for December.
 
 - Curiosity Clusters:
-  - Gloss texture grittiness/stickiness (Kaleidos vs Fenty; user asks about feel).
-  - Glitter gels lifting base (Wet n Wild gel critique); desire for better adhesives.
-  - Dew level preferences (Fwee “semi vs wet”), fragrance notes.
-  - Shipping/tariffs for AU brands (Cloudicos/Glaminatrix); US warehouse availability.
-  - Shade/technique asks: “What was your eye look?”, “Can you do gray version?”, “List your palettes/glitter sticks?”
+  - Gloss texture: “gritty?” “sticky?” (Kaleidos vs Fenty)
+  - Glitter gels: “too wet,” lifted shadow (Wet n Wild)
+  - Tariffs/shipping: AUS/EU indie (Cloudicos, Glaminatrix US warehouse queries)
+  - Tutorial asks: full product lists, palette/iridescent layering guidance; freckles how-to; smoky versions in different colors.
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Eyes:
-    - Multichrome/iridescent singles and topper palettes: jewel olives, blackened greens, cranberry shimmers, icy silvers; include low‑flake, high‑sparkle options.
-    - Mixed-metals duo sets (champagne + bronze/olive) and chartreuse pencils/liners.
-    - Glitter support: high-grip eye-safe adhesives; non-lifting glitter gels.
-  - Lips:
-    - Cool brown and black liners, greige/gray glosses, blue-toned balms; deep aubergine sheers; metallic options.
-    - High-sparkle gloss melts with varying particle sizes (offer texture transparency).
-  - Complexion/Cheeks:
-    - Baby pink and mauve/berry cream blushes (highly pigmented but blendable).
-    - Duochrome/pearl highlighters (fire-opal, lavender/blue shifts).
-    - Dewy SPF tone-up preps (semi vs wet finishes).
-  - Tools/Extras:
-    - Depotting/repair kits and magnetic palettes (Artificer buzz validates category).
-    - Holiday-forward curated bundles: “Grunge Sparkle Kit” (black base, jewel topper, greige gloss, chartreuse liner, glitter adhesive).
+  - Multichrome/duochrome singles and deep jewel shimmers:
+    - Terra Moons: Ecliptica, Midnight Arc, Celestine Dust, Tempel, Neowise.
+    - Fantasy Cosmetica Artificer + holo singles (Stygium, Damascus, Adamantine); include the toolkit.
+    - Oden’s Eye Ice Crystal; Viseart Sireneuse (green story); Dieverune singles; Cloudicos Pocket Winter/Spring.
+  - Sparkle lips without grit:
+    - Kaleidos Glossload (Cypher, Prismelt, Lunar Token) and a Fenty “How Many Carats” alternative for scent-sensitive shoppers.
+  - Grunge lip builders:
+    - Cool/“cold brown” liners, reliable black pencils (Kiko 36 analogues), blue-toned balms, vampy sheer sticks (Rituel de Fille Hemlock).
+  - High-performance pastel palettes:
+    - Blend Bunny (Longing, Garden of Stars, Efflorescence toppers) with dark-skin guidance.
+  - Tools/adjacencies:
+    - Eye-safe glitter adhesive, gentle sparkle removers, pan pullers/repair kits, lash styles akin to Lilly Lashes Mykonos.
 
 - Content Strategy:
-  - 30–60s try-on reels swatching “every shade” (Terra Moons-style) and low-light sparkle flips.
-  - “Semi vs wet” dewy prep split-face tests; macro swatch labels; texture disclosures.
-  - Lip cocktail recipes (liner + gloss + balm overlays) and under-brow/under-eye pastel placement shorts.
-  - Mixed-metals eye tutorial; monochrome red look; “office-to-party” topper transitions.
-  - Address shipping/tariff FAQs for AU brands; US-warehouse flags on PDPs.
+  - Short “semi vs wet” or “gritty vs smooth” split-face/arm tests; pin texture verdicts.
+  - Full-collection try-on reels (1–2 min), macro/low-light sparkle flips, and shade ranking.
+  - Lip combo recipes: cold brown + black corners + center gloss/blue balm; saveable format.
+  - Comparison posts: Kaleidos Cypher/Prismelt vs Fenty How Many Carats; indie topper palette showdown.
+  - Inclusive tutorials: pastel on deep skin (build, base choice, where to stop blending per Dee Dee’s script).
 
 - Gap Analysis:
-  - Provide non-lifting glitter gels/adhesives and warn users about base-lifting formulas.
-  - Offer KIKO 36 Cold Brown dupes (cool brown liners) and stock black liners with slip + set.
-  - Include deeper anchor shades in pastel/cute palettes.
-  - Note gloss texture options (buttery vs chunky glitter) and scent-free variants.
+  - Glitter gels that don’t disturb underlayers; luminous powders safe for under-eye (call out mica particle size).
+  - Affordable “depth” in mainstream pink palettes (Wet n Wild feedback: lacks depth).
+  - Non-sticky, non-gritty sparkle glosses; scented vs unscented options.
+  - Consistent availability of cool/neutral brown liners (Kiko 36 analog demand).
+  - Clear tariff/shipping comms for AUS/EU indie—offer US-warehouse stocked alternatives.
 
 ## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Pastel “tucked” under-eye/inner socket highlight with otherwise neutral/grunge looks.
-  - Chartreuse/sage accents paired with cool blue smoke—read as modern editorial holiday.
-  - Greige/grey gloss as a wearable grunge neutral (MOB Linger momentum).
-  - Customization as hobby: depot/repair kits and empty magnetic books gaining traction.
+  - Glitter saturation beyond the lid—down the lower lash line and up toward the brow; star-shaped glitter accents.
+  - Chartreuse detail as a transformer shade (inner corner/waterline) against cool-toned glitter smoke.
+  - Mixed metals eye looks (warm gold base + cool iridescent topper) appearing in multiple creators.
 
 - Unexpected Pairings:
-  - Cream clay eyeshadow reused as blush (MOB “Memento”-style use).
-  - Matte liquid lipstick + holo lip oil center to shift hue (blue tint overlays).
-  - Mixed-metals lids (gold inner/bronze outer) on warm–cool hybrid faces.
-  - Danessa Colorfix Stix foils used as lid topcoats over neutrals instead of glitter.
+  - Palette shades used as blush (MOB x CQ purple as blush); lip oil over matte liquid lipstick for a blue-cast grunge lip; “blue balm” layered over mauves to cool and amplify shine.
+  - SPF/dewy preps under medium-coverage foundation with visible glow difference (Fwee semi vs wet).
 
-- Creative Insight:
-  - Package “Holiday Grunge Sparkle” bundles: black cream base, one jewel multichrome, one icy topper, chartreuse pencil, greige gloss, mini glitter adhesive. Pair with a “low-light sparkle” reel template to replicate the week’s best-performing visual language.
+- Creative insight:
+  - “Pastel emo” is crystallizing: coquette pink structure + grunge under-eye and black liner edges, sold through relatable, fast GRWMs. Pair this with low-light sparkle showcasing and you have the week’s winning content formula.
+  - Nails as supporting aesthetic: copper chrome press-ons echo the mixed-metal eye trend—cross-merchandising opportunity with metallic nails beside glitter shadows and lip toppers.
